@@ -1,3 +1,10 @@
+Tue Jun 15 09:49:16 2004  Nicola Pero <n.pero@mi.flashnet.it>
+
+	* GNUstep.sh.in: Detect if we're running under zsh, and if so, if
+	the shwordsplit option is not set, set it for the duration of the
+	script, then restore it to its original value at the end.  This
+	seems to fix setting the paths on zsh.
+	
 2004-06-14  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in (uninstall): Remove all installed files (still
